--- a/src/app/pages/hoa-info/hoa-basic-info/hoa-basic-info.component.scss
+++ b/src/app/pages/hoa-info/hoa-basic-info/hoa-basic-info.component.scss
@@ -1,16 +1,20 @@
-nb-checkbox {
-  margin-bottom: 1rem;
-}
+@import '../../../@theme/styles/themes';
 
-.form-inline [fullWidth] {
-  flex: 1;
-}
+@include nb-install-component() {
 
-.form-inline > * {
-  margin: 0 1.5rem 1.5rem 0;
+  nb-checkbox {
+    margin-bottom: 1rem;
+  }
+  
+  .form-inline [fullWidth] {
+    flex: 1;
+  }
+  
+  .form-inline > * {
+    margin: 0 1.5rem 1.5rem 0;
+  }
+  
+  nb-card.inline-form-card nb-card-body {
+    padding-bottom: 0;
+  }
 }
-
-nb-card.inline-form-card nb-card-body {
-  padding-bottom: 0;
-}
-
