environment api url added

--- a/src/app/pages/hoa-input/hoa-basic-info/hoa-basic-info.component.html
+++ b/src/app/pages/hoa-input/hoa-basic-info/hoa-basic-info.component.html
@@ -6,6 +6,7 @@
         <p>
           Value: {{ hoaForm.controls['hoaName'].value }} Property Type: {{ hoaForm.controls['hoaPropertyType'].value }}
         </p>
+        <p>API URL: {{api_url}}</p>
       </nb-card-body>
     </nb-card>
   </div>
